--- a/deploy/crds/lunarway.com_hubbleusers_crd.yaml
+++ b/deploy/crds/lunarway.com_hubbleusers_crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: hubbleusers.lunarway
+  name: hubbleusers.lunarway.com
 spec:
-  group: lunarway
+  group: lunarway.com
   names:
     kind: HubbleUser
     listKind: HubbleUserList
