--- a/deploy/crds/lunarway.com_hubbleusers_crd.yaml
+++ b/deploy/crds/lunarway.com_hubbleusers_crd.yaml
@@ -30,6 +30,19 @@ spec:
           type: object
         spec:
           description: HubbleUserSpec defines the desired state of HubbleUser
+          properties:
+            email:
+              type: string
+            name:
+              type: string
+            roles:
+              items:
+                type: string
+              type: array
+          required:
+          - email
+          - name
+          - roles
           type: object
         status:
           description: HubbleUserStatus defines the observed state of HubbleUser
