--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -70,6 +70,11 @@ rules:
   - lunarway
   resources:
   - '*'
+  - hubbledatabases
+  - hubbledatasources
+  - hubbleroles
+  - hubbledeveloperdatabases
+  - hubblepolicyreferences
   verbs:
   - create
   - delete
