--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13.3'
-      - uses: jpkrohling/setup-operator-sdk@v1-release
+      - uses: jpkrohling/setup-operator-sdk@v1.0.2
         with:
           operator-sdk-version: v0.11.0
 
