--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
           operator-sdk-version: v0.11.0
 
       - name: Set tag in environment
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10}) # extracts the tag name from refs/tags/v1.2.3
+        run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV # extracts the tag name from refs/tags/v1.2.3
 
       - name: "Build image"
         run: make image/build TAG=$RELEASE_VERSION
