--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,12 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13.3'
-      - uses: jpkrohling/setup-operator-sdk@v1.0.2
-        with:
-          operator-sdk-version: v0.11.0
+
+      - name: "Formatting check"
+        run: make fmt/check
 
       - name: "Compile"
-        run: make code/compile
+        run: make manager
+
+      - name: "Test"
+        run: make test
