--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,15 +12,12 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13.3'
-      - uses: jpkrohling/setup-operator-sdk@v1.0.2
-        with:
-          operator-sdk-version: v0.11.0
 
       - name: Set tag in environment
-        run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV # extracts the tag name from refs/tags/v1.2.3
+        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10}) # extracts the tag name from refs/tags/v1.2.3
 
       - name: "Build image"
-        run: make image/build TAG=$RELEASE_VERSION
+        run: make docker-build TAG=$RELEASE_VERSION
 
       - name: "Docker login to Quay.io"
         env:
@@ -29,4 +26,4 @@ jobs:
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD quay.io
 
       - name: "Push image"
-        run: make image/push TAG=$RELEASE_VERSION
+        run: make docker-push TAG=$RELEASE_VERSION
