--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
           go-version: '1.13.3'
 
       - name: Set tag in environment
-        run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10}) # extracts the tag name from refs/tags/v1.2.3
+        run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV # extracts the tag name from refs/tags/v1.2.3
 
       - name: "Build image"
         run: make docker-build TAG=$RELEASE_VERSION
